# eml-viewer

./: .gitignore  AI_CODE_MAP.md  LICENSE  README.ko.md  README.md  installer_log.txt  myAGENT.md  pyproject.toml
.github/workflows/: release.yml
packaging/inno/: README.md  eml_viewer.iss
packaging/pyinstaller/: eml_viewer.spec
samples/: example_plain_text.eml
scripts/: build_installer.ps1  build_windows.ps1
src/eml_viewer/: __init__.py  __main__.py  app.py
src/eml_viewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eml_viewer/future/: __init__.py  ai_analysis_service.py  batch_scan_service.py  history_service.py  rename_plan_service.py  update_service.py
src/eml_viewer/gui/: __init__.py  attachment_widgets.py  dialogs.py  i18n.py  main_window.py  message_widgets.py  metadata_widgets.py  settings_dialog.py  theme.py
src/eml_viewer/i18n/: __init__.py  translator.py
src/eml_viewer/models/: __init__.py  app_settings.py  attachment_data.py  email_data.py
src/eml_viewer/services/: __init__.py  attachment_service.py  eml_parser.py  error_service.py  file_operation_service.py  forward_service.py  settings_service.py  translation_service.py  update_service.py
tests/: test_attachment_service.py  test_attachment_widgets.py  test_eml_parser.py  test_file_operation_service.py  test_forward_service.py  test_i18n.py  test_main_window.py  test_message_widgets.py  test_metadata_widgets.py  test_settings_service.py  test_translation_service.py  test_update_download.py  test_update_service.py
(+2 files in other folders)
