[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eml-viewer"
version = "0.1.0"
description = "Windows-first desktop EML viewer built with Python and PySide6."
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "PySide6>=6.8",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
eml-viewer = "eml_viewer.app:main"

[tool.setuptools.packages.find]
where = ["src"]
